---------------------------------------------------------------------------------------------------
Version: 0.69.7
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.6
Date: 2025-06-21
  Changes:
    - Fixed bug where inserters could get stuck targetting the invisible beacons.
---------------------------------------------------------------------------------------------------
Version: 0.69.5
Date: 2025-06-21
  Changes:
    - Fixed issues with mods that would dynamically create/delete/merge forces. Also more robust multiplayer.
---------------------------------------------------------------------------------------------------
Version: 0.69.4
Date: 2025-06-21
  Changes:
    - Additional safeguards against adding player characters to upgrade lists.
    - Additional safeguards against other mods causing crashes by fucking with my modules.
---------------------------------------------------------------------------------------------------
Version: 0.69.3
Date: 2025-06-21
  Changes:
    - Fixed Crash
---------------------------------------------------------------------------------------------------
Version: 0.69.2
Date: 2025-06-20
  Changes:
    - Removed space age required tag.
---------------------------------------------------------------------------------------------------
Version: 0.69.1
Date: 2025-06-20
  Changes:
    - First public version.